[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdcl_aoc_helpers = "0.10.0"
num = "0.4.0"
indicatif = {version = "*", features = ["rayon"]}
priority-queue = "1.2.1"
memoize = "0.1.9"
lazy_static = "1.4"
rayon = "1.5.1"